--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
     }
 #table {
         color:yellow;
+        text-align: center;
     }
  .header {
     color:red;
@@ -35,5 +36,10 @@ h1 {
     text-align: center;
     font-size:35px;
 }
-
- 
+img {
+    width: 450px;
+    height: 400px
+}
+ .footer {
+    text-align: center;
+ }
